--- a/css/session2.css
+++ b/css/session2.css
@@ -9,6 +9,10 @@ h1{
     font-size: 50px;
     line-height: 1.5;
     text-align: center;
+    border-bottom: 10px solid green;
+    border-top: 10px solid green;
+    border-left: 10px solid green;
+    border-right: 10px solid green;
 }
 p{
     color: #222222;
