--- a/css/LabS2.css
+++ b/css/LabS2.css
@@ -1,22 +1,66 @@
-body{
-    padding-left: 40px ;
-    padding-right: 40px;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-p{
-    border-bottom: 2px dashed #790b0b;
-    text-align: left;
+.clear{
+    clear: both;
 }
-h3{
-    color: #790b0b;
+.link{
+    color: red;
+    font-weight: 700;
+    font-style: italic;
+    margin-bottom: 20px;
+    display: block;
+}
+.heading6{
+    display: inline-block;
+    font-size: 15px;
+    font-style: italic;
+    font-weight: 700;
+}
+.border-bottom{
+    border-bottom: 2px dashed red;
+}
+.mg {
+    margin-left: 15%;
+    margin-right: 15%;
+}
+#header{
+    margin-top: 40px;
+    margin-bottom: 20px;
 }
 img{
-    max-width: 100%;
+    width: 150px;
+    padding-bottom: 10px;
 }
-.column {
-    float: left;
-    width: 50%;
-    height: 300px;
+#total-info{
+    display: inline-block;
+    float: right ;
+    text-align: right;
+    line-height: 1.4;
+    padding-top: 80px;
 }
-div.detail {
+#total-info .first{
+    font-weight: 700;
+}
+#Academic,#Language,#Other,#Professional,#Experience,
+#presentation{
+    line-height: 1.4;
+}
+#Experience .link{
+    margin-bottom: 0px;
+}
+h4{
+    display: inline-block;
+}
+.company{
+    float: right;
+}
+.company p{
     text-align: right;
 }
+.last{
+    max-width: 50%;
+}
+
